Writing more integration tests.